--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sdasdwasdsdw</title>
+    <title>BBSOFT</title>
 </head>
 <body>
-    <h4>ssss</h4>
+    <h3>BBOSOFT</h3>
 </body>
 </html>
