--- a/design/dashboard.html
+++ b/design/dashboard.html
@@ -42,7 +42,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">จัดการข้อมูลพนักงาน</a>
                     </li>
-                    <div class="navbar-nav">
+                    <div class="navbar-nav user">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle username" id="dropdownMenuButton1"
                                 data-bs-toggle="dropdown" aria-expanded="false" href="#">ศรัญญู คูณปล้อง
@@ -79,13 +79,14 @@
                                 <div class="col-12 col-sm-6">
                                     <p>รายได้ทั้งหมดวันนี้ / บาท</p>
                                     <h3 class="text-income">123,456</h3>
+                                <hr class="card-line">
                                 </div>
                                 <div class="col-12 col-sm-6">
                                     <p>รายได้ทั้งหมดเดือนนี้ / บาท</p>
                                     <h3 class="text-income">2,000,000</h3>
+                                <hr class="card-line">
                                 </div>
                             </div>
-                            <hr />
                             <div class="row">
                                 <div class="col-12 col-sm-6">
                                     <p>ค้างชำระ / บาท</p>
@@ -110,13 +111,14 @@
                                 <div class="col-12 col-sm-6">
                                     <p>งานซ่อมทั้งหมดวันนี้ / รายการ</p>
                                     <h3 class="text-repair">40</h3>
+                                <hr class="card-line">
                                 </div>
                                 <div class="col-12 col-sm-6">
                                     <p>กำลังดำเนินการซ่อม / รายการ</p>
                                     <h3 class="text-repair">25</h3>
+                                <hr class="card-line">
                                 </div>
                             </div>
-                            <hr />
                             <div class="row">
                                 <div class="col-12 col-sm-6">
                                     <p>ส่งเครื่องวันนี้ / รายการ</p>
@@ -457,10 +459,7 @@
                                                 <p class="management-stock">สำนักงานใหญ่</p>
                                             </td>
                                             <td>
-                                                <i class="fas
-                                                        fa-chevron-down" data-bs-toggle="collapse"
-                                                    href="#multiCollapseExample1" role="button" aria-expanded="false"
-                                                    aria-controls="multiCollapseExample1"></i>
+                                                <i class="fas fa-chevron-down"></i>
                                             </td>
                                         </tr>
                                         <tr class="d-flex
@@ -485,22 +484,8 @@
                                                 <p class="management-stock">สำนักงานใหญ่</p>
                                             </td>
                                             <td>
-                                                <i class="fas
-                                                        fa-chevron-down" data-bs-toggle="collapse"
-                                                    href="#multiCollapseExample" role="button" aria-expanded="false"
-                                                    aria-controls="multiCollapseExample1"></i>
+                                                <i class="fas fa-chevron-down"></i>
                                             </td>
-                                    <tbody class="collapse
-                                                    multi-collapse" id="multiCollapseExample">
-                                        <td>
-                                            <p>ราบละเอียด :</p>
-                                            <p>ราบละเอียด :</p>
-                                            <p>ราบละเอียด :</p>
-                                            <p>ราบละเอียด :</p>
-                                        </td>
-                                    </tbody>
-                                    </tr>
-                                    </tbody>
                                 </table>
                             </div>
                             <a href="#" class="more d-flex
