--- a/design/dashboard.html
+++ b/design/dashboard.html
@@ -19,53 +19,36 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container d-flex justify-content-between">
-            <a class="navbar-brand" href="#"><span class="bb">BB</span><span class="soft">SOFT</span></a>
-            <div class="collapse navbar-collapse ms-1" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">สรุปภาพรวม</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">จัดการสินค้า</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">คลังสินค้า</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">ข้อมูลงานซ่อม</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">จัดการบิล/ใบเสร็จ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">จัดการข้อมูลพนักงาน</a>
-                    </li>
-                    <div class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle username" id="dropdownMenuButton1"
-                                data-bs-toggle="dropdown" aria-expanded="false" href="#">ศรัญญู คูณปล้อง
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li>
-                                    <a class="dropdown-item" href="#"><span class="badge bg-success">แอดมิน</span></a>
-                                </li>
-                                <li><a class="dropdown-item" href="#">โปรไฟล์</a></li>
-                                <li><a class="dropdown-item" href="#">ประวัติการทำงาน</a></li>
-                                <li><a class="dropdown-item" href="#">ออกจากระบบ</a></li>
-                            </ul>
-                        </li>
+    <nav class="navbar navbar-expand-lg navbar-light d-flex justify-content-lg-between">
+                <div class="container ">
+                <a class="navbar-brand" href="#"><span class="bb">BB</span><span class="soft">SOFT</span></a>
+                    <div class="collapse navbar-collapse " id="navbarNavDropdown">
+                        <ul class="navbar-nav ">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">สรุปภาพรวม</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">จัดการสินค้า</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">คลังสินค้า</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">ข้อมูลงานซ่อม</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">จัดการบิล/ใบเสร็จ</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">จัดการข้อมูลพนักงาน</a>
+                            </li>
+                        </ul>
                     </div>
-
-                </ul>
-            </div>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
     </nav>
 
     <div class="content">
