--- a/design/dashboard.html
+++ b/design/dashboard.html
@@ -20,9 +20,11 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light d-flex justify-content-lg-between">
-                <div class="container ">
-                <a class="navbar-brand" href="#"><span class="bb">BB</span><span class="soft">SOFT</span></a>
-                    <div class="collapse navbar-collapse " id="navbarNavDropdown">
+                <div class="container" >
+                    <div class="logo">
+                             <a class="navbar-brand" href="#"><span class="bb">BB</span><span class="soft">SOFT</span></a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav ">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">สรุปภาพรวม</a>
@@ -42,8 +44,13 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">จัดการข้อมูลพนักงาน</a>
                             </li>
+                            <li class="nav-item username">
+                                <a class="nav-link" href="#">ศรัญญู คูณปล้อง</a>
+                            </li>
                         </ul>
+                               
                     </div>
+            
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
